avoid page breaks in entry content

--- a/src/assets/styles/print/_index.scss
+++ b/src/assets/styles/print/_index.scss
@@ -76,6 +76,7 @@
         -webkit-print-color-adjust: exact !important;
     }
 
+    .entrylist__item,
     .entry {
         page-break-inside: avoid;
     }
